--- a/pricingPage.css
+++ b/pricingPage.css
@@ -23,11 +23,38 @@
 
 
 .pricing-card-wrapper{
+    border: 1px solid red;
+    margin: auto;
     display: flex;
+    
+    width: 78%;
 }
 
 .pricing-card{
-    border: 1px solid;
+    /* border: 1px solid; */
+    margin: 1px;
+    width: 20%;
+}
+.pricing-card h2{
+    font-size: 25px;
+    line-height: 70px;
+    font-weight: 700px;
+}
+
+.pricing-card p{
+    line-height: 28px;
+    font-weight: 500px;
+    font-size: 18px;
+    /* color: #2b3857; */
+}
+
+.pricing-card li{
+    cursor: pointer;
+    text-decoration: dotted;
+}
+
+button{
+    cursor: pointer;
 }
 
 .pricing-banner{
@@ -62,7 +89,8 @@
 
 .pricing-note, 
 .logo-text, 
-.add-on-text > p {
+.add-on-text > p,
+.signup-section p{
     /* border: 1px solid; */
     text-align: center;
     line-height: 28px;
@@ -151,13 +179,23 @@
     /* background-color: #04454d; */
 }
 
-
-
 .signup-section {
     border: 1px solid ;
     display: flex;
 }
 
+.signup-section h2{
+    /* border: 1px solid; */
+    height: auto;
+    margin: auto;
+    text-align: center;
+    font-size: 42px;
+    line-height: 70px;
+    font-weight: 700px;
+    padding-top: 3%;
+    margin: auto;
+    padding: auto;
+}
 
 .leader-content{
     border: 1px solid;
