--- a/meenakshi/pricingPage.css
+++ b/meenakshi/pricingPage.css
@@ -23,7 +23,7 @@
 
 
 .pricing-card-wrapper{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin: auto;
     display: flex;
     padding-bottom: 4%;
@@ -31,43 +31,106 @@
 }
 
 .pricing-card{
-    border: 1px solid green;
-    margin: 1px;
+    /* border: 1px solid green; */
+    /* margin: 25px; */
     width: 20%;
 }
 
 /* pricing cards section -----------------------*/
-.card-one, .card-two, .card-three, .card-four{  
-    border: 1px solid ;
+.card-one,
+.card-two, 
+.card-three, 
+.card-four,
+.diff-card1,
+.diff-card2,
+.diff-card3,
+.diff-card{  
+    /* border: 1px solid ; */
+    padding: 10px;
 } 
 
-.card-one{
+.card-one,
+.diff-card1{
     width: auto;
-    height: 160px;
+    height: 200px;
 }
 
+.card-two,
+.diff-card2{
+    width: auto;
+    height: 210px;
+}
 
-/* .pricing-card h2{
-    font-size: 25px;
-    line-height: 70px;
+.card-three, 
+.diff-card3{
+    width: auto;
+    height: 700px;
+}
+
+.pricing-card h2{
+    font-size: 32px;
+    line-height: 20px;
     font-weight: 700px;
-} */
-
-/* .pricing-card p{
-    line-height: 28px;
-    font-weight: 500px;
-    font-size: 18px;
-     color: #2b3857; 
-} */
-
-/* .pricing-card li{
-    cursor: pointer;
-    text-decoration: dotted;
-} */
-
-button{
-    cursor: pointer;
 }
+
+.pricing-card h4 {
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 700px;
+    color: #181f38;
+}
+
+.pricing-card solid{
+    /* line-height: 28px; */
+    font-weight: 400px;
+    font-size: 16px;
+    color: #181f38; 
+    text-align: left;
+}
+
+.pricing-card li{
+    cursor: pointer;
+    line-height: 30px;
+    text-decoration: none ;
+    list-style: none;
+}
+
+li > span {
+    color: #08cf56;
+}
+.card-two button, 
+.card-four button,
+.diff-card2 button,
+.diff-card4 button{
+    cursor: pointer;
+    border-radius: 12px;
+    width: 200px;
+    height: 60px;
+    background-color: #08cf56;
+    border-color: #08cf56;
+    color: white;
+    font-size: 25px;
+    line-height: 28px;
+    margin-bottom: 8px;
+}
+
+#btn, #btn2, #btn3, #btn4{
+    cursor: pointer;
+    border-radius: 12px;
+    width: 200px;
+    height: 60px;
+    border-color: #0b4a52;
+    background-color: transparent;
+    color: #0b4a52;
+    font-size: 25px;
+    line-height: 28px;
+    margin-bottom: 8px;
+}
+
+#btn :hover{
+    background-color: #0b4a52;
+}
+
 
 .pricing-banner{
     /* border: 1px solid; */
@@ -197,7 +260,8 @@ button{
     display: flex;
 }
 
-.signup-section h2{
+.signup-section h2,
+.faq-section h2{
     /* border: 1px solid; */
     height: auto;
     margin: auto;
@@ -220,9 +284,9 @@ button{
     margin-top: 5%;
 }
 
-.input_button > input{
+.input_button form > input{
     width: 350px;
-    height: 60px;
+    height: 65px;
     font-size: 18px;
     border-radius: 12px;
     border-color: #c1c9d8;
@@ -231,18 +295,17 @@ button{
     margin: auto;
 }
 
-.input_button > button{
+.input_button form > button{
     margin-left: 15px;
     border-radius: 12px;
     width: 200px;
     height: 70px;
-    border: none;
     background-color: #08cf56;
     border-color: #08cf56;
     color: white;
     font-size: 25px;
     line-height: 28px;
-    padding: 14px 22px;
+    /* padding: 14px 22px; */
 }
 
 .leader-content{
@@ -256,5 +319,24 @@ button{
 
 .faq-section{
     border: 1px solid;
-    background-color: #ebf5f3;    
+    background-color: #ebf5f3;   
+    margin-top: 5%; 
+    display: grid;
 }
+
+.faq-card{
+    margin: auto;
+    border: 1px solid ;
+}
+
+.faq-card > div{
+    margin: 20px;
+    border: 1px solid;
+    width: 600px;
+    height: 80px;
+    border-radius: 12px;
+    background-color: white;
+    
+    
+}
+
