--- a/style/workspace-css-page-3.css
+++ b/style/workspace-css-page-3.css
@@ -140,7 +140,7 @@ form {
     display: none;
 }
 
-.next_button {
+.next_button3 {
     padding: 13px 30px;
     border-radius: 5px;
     background-color: #006358;
