--- a/style/workspace.css
+++ b/style/workspace.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     background-color: #61728F;
-    /* position: relative; */
+    position: relative;
 
 }
 
@@ -19,13 +19,13 @@
     background-color: black;
     border-radius: 15px;
     height: 90%;
-    width: 65%;
+    width: 75%;
     align-items: center;
     display: flex;
-    /* flex-direction: column; */
-    grid-template-columns: repeat(1fr, );
+    /* gap: 4rem; */
     background-color: white;
-    padding: 0% 10%;
+    padding: 0% 5%;
+
 
 }
 
@@ -46,7 +46,7 @@ textarea {
 }
 
 input[type="number"] {
-    width: 100%;
+    width: 208%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -62,6 +62,11 @@ input[type="submit"]:hover {
 
 .left_logo_container {
     width: 35%;
+    margin: 0px 0 0 15px;
+}
+
+.left_logo_container>div:last-child {
+    width: 80%;
 }
 
 .left_logo_container>div:last-child>h2,
@@ -73,7 +78,12 @@ span {
 
 .left_logo_container>div:last-child>h2 {
     font-size: 1.7rem;
-    line-height: 3rem;
+}
+
+.left_logo_container>div:last-child>p {
+    font-family: 'Poppins', sans-serif;
+    font-size: .8rem;
+    line-height: 1.7rem;
 }
 
 .left_logo_container>div:first-child>img {
@@ -83,19 +93,19 @@ span {
 }
 
 .right_logo_container {
-    width: 60%;
+    width: 50%;
     display: flex;
     flex-direction: column;
 }
 
 .right_logo_container>div:first-child>img {
     width: 100%;
+    overflow: hidden;
 }
 
 
 #number_div {
     display: flex;
-    /* width: 100%; */
     gap: 30px;
 
 }
@@ -132,7 +142,9 @@ form {
     display: none;
 }
 
-.next_button {
+.next_button,
+.next_button2,
+.next_button3 {
     padding: 13px 30px;
     border-radius: 5px;
     background-color: #006358;
@@ -164,32 +176,18 @@ form {
     background-color: #006358;
 }
 
-/* =================== mid screen ============================== */
-@media(min-width: 600px) and (max-width: 1000px) {
+/* @media (max-width:300px) {} */
+
+@media (min-width:300px) and (max-width:1000px) {
     .main_container {
         background-color: black;
         border-radius: 15px;
         height: 90%;
-        width: 45%;
-        /* align-items: center; */
-        display: grid;
+        width: 65%;
+        align-items: center;
+        /* display: flex; */
         background-color: white;
         padding: 0% 10%;
-        text-align: center;
 
     }
-
-    #copy_this_div {
-        display: flex;
-        margin-left: -8rem;
-        height: 99vh;
-        justify-content: center;
-        align-items: center;
-        background-color: #61728F;
-        position: relative;
-
-    }
-
-    .left_logo_container {}
-
 }
