--- a/vishal/style/dashboard.css
+++ b/vishal/style/dashboard.css
@@ -26,7 +26,7 @@ body {
     display: flex;
     position: absolute;
     width: 98.5%;
-    z-index: 10;
+    z-index: 30;
     justify-content: space-between;
     height: 3.7rem;
     background-color: #181f38;
@@ -54,6 +54,8 @@ body {
 
 #thumbrack {
     transform: rotate(45deg);
+    font-size: 13px;
+    margin-left: -10px;
 }
 
 .Navigation_bar>div:last-child {
@@ -125,8 +127,9 @@ body {
 .side-bar {
     background: #181f38;
     /* backdrop-filter: blur(15px); */
-
+    z-index: 20;
     width: 250px;
+    overflow: hidden;
     height: 100vh;
     position: absolute;
     /* top: 0; */
@@ -136,13 +139,17 @@ body {
     /* transition-property: left; */
 }
 
-/* .side-bar::-webkit-scrollbar {
+.side-bar::-webkit-scrollbar {
     width: 0px;
-} */
+}
 
-/* .side-bar.active {
+.side-bar.active {
     left: 0;
-} */
+}
+
+.menu>div {
+    margin-left: -10px;
+}
 
 .side-bar .menu {
     width: 90%;
@@ -156,9 +163,10 @@ body {
     cursor: pointer;
 }
 
+
 .side-bar i {
     font-size: 12px;
-    color: rgb(88, 88, 88);
+    color: rgb(121, 121, 121);
 }
 
 .side-bar .menu .item a {
@@ -180,22 +188,216 @@ body {
     background: #485776;
     transition: 0.3s ease;
     border-radius: 10px;
-
 }
 
-
 .side-bar .menu .item a .dropdown {
-    /* position: absolute; */
-    /* right: -10; */
     margin: 7px 20px;
     transition: 0.3s ease;
 }
 
+
 .side-bar .menu .item .sub-menu {
-    background: #262627;
     display: none;
+    color: rgb(194, 192, 192);
+    font-size: 13px;
+    text-decoration: none;
+    padding-left: 20px;
+    line-height: 30px;
+    font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
 }
 
-.side-bar .menu .item .sub-menu a {
-    padding-left: 80px;
+.table_div {
+    width: 80%;
+    /* position: relative; */
+    display: flex;
+    z-index: 20;
+    padding-top: 4.7rem;
+    padding-left: 17rem;
+    gap: 52.5rem;
+    align-items: center;
+}
+
+.table_div>div:first-child h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 600;
+}
+
+
+.table_div>div:last-child {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.table_div button {
+    border-radius: 5px;
+    padding: 5px 11px;
+    background-color: #028564;
+    color: white;
+    font-size: 12px;
+    cursor: pointer;
+    border: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.table_div button:hover {
+    background-color: #006358;
+}
+
+.table_div2 {
+    width: 80%;
+    display: flex;
+    z-index: 20;
+    padding-left: 17rem;
+    margin-top: 23px;
+    margin-bottom: 13px;
+    align-items: center;
+}
+
+.table_div2>div {
+    display: flex;
+    gap: 2rem;
+}
+
+.table_div2>div a {
+    text-decoration: none;
+    color: grey;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.table_div2>div i {
+    font-size: 12px;
+    margin-right: 7px;
+}
+
+.table_div3 {
+    width: 80%;
+    display: flex;
+    z-index: 20;
+    padding-left: 17rem;
+    align-items: center;
+}
+
+.table_div3>div {
+    display: flex;
+    gap: 2rem;
+}
+
+.table_div3>div a {
+    text-decoration: none;
+    color: grey;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.table_div3>div i {
+    font-size: 12px;
+    margin-right: 7px;
+}
+
+.table_div3 .sub-menu {
+    display: none;
+    color: rgb(194, 192, 192);
+    font-size: 13px;
+    text-decoration: none;
+    padding-left: 20px;
+    line-height: 30px;
+    font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
+}
+
+.table_div3 a .dropdown {
+    margin: 7px 20px;
+    transition: 0.3s ease;
+}
+
+
+.table_div3 {
+    cursor: pointer;
+}
+
+.table_div3 a {
+    color: rgb(77, 76, 76);
+    font-size: 12px;
+    text-decoration: none;
+    display: block;
+    padding: 5px 0px;
+    line-height: 30px;
+    font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
+}
+
+nav ul {
+    float: right;
+    /* margin-right: 10px; */
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a {
+    color: white;
+    display: block;
+    padding: 0 15px;
+    line-height: 70px;
+    font-size: 14px;
+    transition: .5s;
+}
+
+nav ul li a:hover,
+nav ul li a.active {
+    color: black;
+}
+
+nav ul ul {
+    position: absolute;
+    /* top: 65px; */
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    opacity: 0;
+    visibility: hidden;
+}
+
+nav ul li:hover>ul {
+    opacity: 1;
+    visibility: visible;
+    transition: .3s linear;
+    overflow: hidden;
+}
+
+nav ul ul li {
+    width: 170px;
+    display: list-item;
+    position: relative;
+    list-style: none;
+    padding-left: 15px;
+    border-top: none;
+}
+
+nav ul ul li a {
+    line-height: 50px;
+}
+
+nav ul ul ul {
+    border-top: none;
+}
+
+nav ul ul ul li {
+    position: relative;
+    top: -70px;
+    left: 150px;
+    width: 100%;
+}
+
+nav ul ul li a i {
+    margin-left: 45px;
+}
+
+nav ul ul li:hover {
+    background-color: rgb(210, 217, 219);
+}
+
+nav ul ul li a input {
+    margin-right: 10px;
 }
